<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/textColorBrown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psw"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/loginPsw"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validar"
        android:layout_marginTop="24dp"/>

</LinearLayout>
