<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/username"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/textColorBrown" />

        <ImageButton
            android:id="@+id/menu_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/menu_icon_description"
            android:focusable="true"
            android:src="@drawable/ic_three_dots"
            android:visibility="visible" />
    </LinearLayout>

    <EditText
        android:id="@+id/editEstanco"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:gravity="center_vertical"
        android:hint="@string/hint1"
        android:inputType="text"
        android:minHeight="60dp"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <AutoCompleteTextView
            android:id="@+id/editar_texto2"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/hint2"
            android:inputType="none"
            android:longClickable="false"
            android:minWidth="100dp"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnOpenVPN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_open_vpn"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_weight="0"
        android:padding="8dp" />

    <!-- Nuevo contenedor horizontal para los botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttons_forms"
            android:text="@string/borrar"
            android:textStyle="bold"
            android:padding="12dp" />


        <Button
            android:id="@+id/sendButtonConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttons_forms"
            android:text="@string/enviar"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/captureButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttons_forms"
            android:text="@string/tomarFoto"
            android:textStyle="bold"
            android:padding="12dp" />
    </LinearLayout>
</LinearLayout>

