<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="top"
    android:background="@drawable/background2"> <!-- Centra todos los elementos hijos -->

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"/> <!-- Centra este TextView horizontalmente -->

    <TextView
        android:id="@+id/textViewUser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textColor="@color/textColorBrown"/> <!-- Centra también este TextView -->

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/user"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/init"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/> <!-- Botón centrado horizontalmente -->

</LinearLayout>
